<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PHT</string>
    <string name="header">PowerHourTimer.com</string>
    <string name="numDrinksHint">60</string>
    <string name="numDrinksLabel">Number of Drinks</string>
    <string name="chooseAlertSound">Alert Sound</string>
    <string name="startGameButtonText">Start Game</string>
    <string name="pauseButtonText">Pause</string>
    <string name="defaultTimerValue">1</string>
    <string name="stopGameText">Stop!</string>
    <string name="drinksCompletedText">drinks completed.</string>
    <string name="resumeButtonText">Resume</string>
    <string name="resumeGameButtonText">Resume Game</string>
    <string name="defaultNumberOfDrinks">60</string>
    <string name="PowerHour">PowerHour</string>
    <string name="Timer">Timer</string>
    <string name="disclaimerText">Rule #1 Don\'t be a moron! This game entails a LOT of drinking and should only be
        played by people who know how to drink, aren\'t alone and won\'t be driving for a long time!
    </string>
</resources>
